tests/ui/inference/ambiguous_type_parameter.stderr
error[E0282]: type annotations needed
  --> $DIR/ambiguous_type_parameter.rs:16:19
   |
LL |     InMemoryStore.get_raw(&String::default());
   |                   ^^^^^^^
   |
help: try using a fully qualified path to specify the expected types
   |
LL -     InMemoryStore.get_raw(&String::default());
LL +     <InMemoryStore as Store<String, HashMap<K, String>>>::get_raw(&InMemoryStore, &String::default());
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
